--- a/main/package.json
+++ b/main/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "test": "jest"
+    "dev": "vite"
   },
   "jest": {
     "transform": {
